# myNumericalMethods

./: README.md
cpp/: CMakeLists.txt
cpp/include/: myNM
cpp/include/myNM_bits/: BackwardDifferentiation.hpp  BissectionMethod.hpp  CentralDifferentiation.hpp  EulerMethod.hpp  ExponentialFittingMethod.hpp  ForwardDifferentiation.hpp  LagrangeInterpolationMethod.hpp  LinearInterpolationMethod.hpp  LinearRegressionMethod.hpp  Matrix.hpp  NewtonRaphsonMethod.hpp  NumericalDifferentiation.hpp  PointFixedMethod.hpp  PolynomialFittingMethod.hpp  RegulaFalsiMethod.hpp  RungeKutta4Method.hpp  SecantMethod.hpp  Simpson1_3Method.hpp  Simpson3_8Method.hpp  TrapezoidalMethod.hpp  Vector.hpp
cpp/src/: BackwardDifferentiation.cpp  BissectionMethod.cpp  CentralDifferentiation.cpp  EulerMethod.cpp  ExponentialFittingMethod.cpp  ForwardDifferentiation.cpp  Histogram.cpp  LagrangeInterpolationMethod.cpp  LineChart.cpp  LinearInterpolationMethod.cpp  LinearRegressionMethod.cpp  Matrix.cpp  NewtonRaphsonMethod.cpp  PointFixedMethod.cpp  PolynomialFittingMethod.cpp  RegulaFalsiMethod.cpp  RungeKutta4Method.cpp  SecantMethod.cpp  Simpson1_3Method.cpp  Simpson3_8Method.cpp  TrapezoidalMethod.cpp  Vector.cpp  mathematics.cpp  test.cpp  testing.cpp  textFunctions.cpp
cpp/tests/: CMakeLists.txt
cpp/tests/src/: myNM.cpp
